errata hfde1 pie de foto

--- a/_posts/2018-01-02-hfde1.html
+++ b/_posts/2018-01-02-hfde1.html
@@ -2,7 +2,7 @@
 layout: post_old
 title: Hasta fin de existencias
 image_path: /projects/hfde1
-footer: '<strong><em>While Stocks Last. Urban details from Madrid</em></strong>&nbsp; 2003 <br><strong><em>Hasta fin de existencias. Detalles urbanos de Madrid</em></strong>380 photos, 228 pages, 21x10,5 cm<br>Project by Leandro Lattes, focusing on urban details of Madrid, heading for extinction'
+footer: '<strong><em>While Stocks Last. Urban details from Madrid</em></strong>&nbsp; 2003 <br><strong><em>Hasta fin de existencias. Detalles urbanos de Madrid</em></strong>. 380 photos, 228 pages, 21x10,5 cm<br>Project by Leandro Lattes, focusing on urban details of Madrid, heading for extinction'
 style: '.description{top: 345px !important;} #video{margin-right: 30px;}'
 ---
 <iframe src="//player.vimeo.com/video/104167435?title=0[content]amp;byline=0[content]amp;portrait=0[content]amp;color=ffffff[content]amp;autoplay=1[content]amp;loop=1" width="444" height="250" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen id="video"></iframe>
