netescopio better images

--- a/_posts/2018-01-02-netescopio.html
+++ b/_posts/2018-01-02-netescopio.html
@@ -6,4 +6,10 @@ footer: '<strong>AC/E, Acción Cultural Española, Meiac, Museo Extremeño e Ibe
 ---
 
 <iframe src="//player.vimeo.com/video/100798281?title=0[content]amp;byline=0[content]amp;portrait=0[content]amp;color=ffffff" width="952" height="535" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="espacio30"></iframe>
-<img class="fix535 espacio0" src="{% include image_path.html %}/netescopio.jpg">
+
+<img class="fix535 espacio0" src="{% include image_path.html %}/Netescopio01.jpg">
+<img class="fix535 espacio0" src="{% include image_path.html %}/Netescopio02.jpg">
+<img class="fix535 espacio0" src="{% include image_path.html %}/Netescopio03.jpg">
+<img class="fix535 espacio0" src="{% include image_path.html %}/Netescopio04.jpg">
+<img class="fix535 espacio0" src="{% include image_path.html %}/Netescopio05.jpg">
+<img class="fix535 espacio0" src="{% include image_path.html %}/Netescopio06.jpg">
