--- a/_posts/2018-01-02-bienal-venecia-es.html
+++ b/_posts/2018-01-02-bienal-venecia-es.html
@@ -2,7 +2,7 @@
 layout: post_old
 title: Spanish representation at the Venice Biennale
 image_path: /projects/bienal-venecia-es
-footer: '<strong>Ministerio de Asuntos Exteriores / AECID / Seacex</strong><br><strong>Spanish representation at the Venice Biennale:</strong> 2009-2007-2005-2003<br>2009 Miquel Barceló. 2007 José Luis Guerin, Los Torreznos, Manuel Vilariño  Rubén Ramos<br>Antoni Muntadas, 2005. Santiago Sierra  Bad Boys, 2003<br>Website, promotional elements, invitations and advertising'
+footer: '<strong>Ministerio de Asuntos Exteriores / AECID / Seacex</strong><br><strong>Spanish representation at the Venice Biennale:</strong> 2009-2007-2005-2003<br>2009 Miquel Barceló. 2007 José Guerin, Los Torreznos, Manuel Vilariño, Rubén Ramos<br>Antoni Muntadas, 2005. Santiago Sierra  Bad Boys, 2003<br>Website, promotional elements, invitations and advertising'
 style: 'body{background-color: #a5a5a5;}'
 ---
 <img src="{% include image_path.html %}/barcelo.png" class="espacio45">
