--- a/_posts/2018-01-02-architectus-omnibus.html
+++ b/_posts/2018-01-02-architectus-omnibus.html
@@ -2,7 +2,8 @@
 layout: post
 title: architectus omnibus?
 image_path: /projects/architectus-omnibus
-footer: '<p><strong>Architectus Omnibus?</strong><br />  <strong>Instituto Cervantes / Goethe Institut </strong> 2014-2015<br />VI Spanish-German Culture Meeting. Berlín amp; Madrid <br />Visual identity, web, exhibition graphics, catalog, postcard and brochure design. <a href="http://architectusomnibus.org/" target="new">www.architectusomnibus.org</a>'
+footer: '<p><strong>Architectus Omnibus?</strong><br />  <strong>Instituto
+    Cervantes / Goethe Institut </strong> 2014-2015<br />VI Spanish-Germa  Culture Meeting. Berlín &amp; Madrid <br />Visual identity, web, exhibition graphics, catalog, postcard and brochure design. <a href="http://architectusomnibus.org/" target="new">www.architectusomnibus.org</a>'
 ---
 <img class="fix535" src="{% include image_path.html %}/ao.png">
 
