generador de arboles - fullscreen iframe

--- a/arboles.html
+++ b/arboles.html
@@ -1,8 +1,1 @@
----
-layout: empty
-title: Árboles
-style: "* { padding:0; margin:0; } iframe{ width:100%; height:100%;
-border:none;}"
----
-
-<iframe src="https://haztecaso.com/arboles/" seamless>
+<iframe src="https://haztecaso.com/arboles/" style="width:100%; height:100%; border:none;" seamless>
