nofollow noreferrer noopener

--- a/estudio.html
+++ b/estudio.html
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Estudio
-footer: '<a href="/studio">Read in English.</a></br> Calle Pez, 27. Oficina 312. 28004 Madrid<br>T +34 915 328 011 <a href="mailto:info@elvivero.es">e-mail</a><br><a href="https://www.instagram.com/elviverodesign" target="_blank" class="nohover">Instagram</a>'
+footer: '<a href="/studio">Read in English.</a></br> Calle Pez, 27. Oficina 312. 28004 Madrid<br>T +34 915 328 011 <a href="mailto:info@elvivero.es">e-mail</a><br><a href="https://www.instagram.com/elviverodesign" target="_blank" rel="noopener noreferrer nofollow" class="nohover">Instagram</a>'
 style: "img{
 	height: 535px;
 	display: inline
@@ -51,11 +51,11 @@ style: "img{
 	</div>
 	<div class="column">
 		<p><b>Florencia Grassi</b></p>
-		<p>Diseñadora gráfica y socióloga. Especializada en comunicación de proyectos artísticos y culturales, identidad visual y diseño de publicaciones. <br><a href="https://es.linkedin.com/pub/florencia-grassi-gurfein/28/78b/207" target="_blank">LinkedIn</a></p>
+		<p>Diseñadora gráfica y socióloga. Especializada en comunicación de proyectos artísticos y culturales, identidad visual y diseño de publicaciones. <br><a href="https://es.linkedin.com/pub/florencia-grassi-gurfein/28/78b/207" target="_blank" rel="noopener noreferrer nofollow">LinkedIn</a></p>
 		<br>
 		<p><b>Leandro Lattes</b></p>
 		<p>Diseñador industrial. Trabaja en el entorno de las marcas y su comunicación desde una perspectiva espacial y de producto. Especializado en diseño 3D y 2D.</p>
-			<p>Autor de los libros <i></i>Hasta fin de existencias I y II</i>. <br /><a href="http://instagram.com/leandrolattes" target="_blank">Instagram</a> <a href="https://es.linkedin.com/pub/leandro-lattes/28/ab8/770" target="_blank">LinkedIn</a></p>
+			<p>Autor de los libros <i></i>Hasta fin de existencias I y II</i>. <br /><a href="http://instagram.com/leandrolattes" target="_blank" rel="noopener noreferrer nofollow">Instagram</a> <a href="https://es.linkedin.com/pub/leandro-lattes/28/ab8/770" target="_blank" rel="noopener noreferrer nofollow">LinkedIn</a></p>
 			<p class="p4"><br></p>
 			<p><b>Colaboradores</b></p>
             <p>Axel Kacelnik, Brendan Mc Cormick,<br> David Sueiro.
