--- a/studio.html
+++ b/studio.html
@@ -1,7 +1,10 @@
 ---
 layout: post
 title: Studio
-footer: '<a href="/estudio">Leer en castellano.</a></br> Calle Pez, 27. Oficina 312. 28004 Madrid<br>T +34 915 328 011 <a href="mailto:info@elvivero.es">e-mail</a><br><a href="https://www.instagram.com/elviverodesign" target="_blank" class="nohover">Instagram</a>'
+footer: '<a href="/estudio">Leer en castellano.</a></br> Calle Pez, 27. Oficina
+312. 28004 Madrid<br>T +34 915 328 011 <a
+href="mailto:info@elvivero.es">e-mail</a><br><a
+href="https://www.instagram.com/elviverodesign" target="_blank" rel="noopener noreferrer nofollow" class="nohover">Instagram</a>'
 style: "img{
 	height: 535px;
 	display: inline
@@ -52,12 +55,12 @@ style: "img{
 	</div>
 	<div class="column">
 		<p><b>Florencia Grassi</b></p>
-		<p>Graphic designer and sociologist. Expertise in communication design for artistic and cultural projects. Specialized in visual identity and editorial design.<br><a href="https://es.linkedin.com/pub/florencia-grassi-gurfein/28/78b/207" target="_blank">LinkedIn</a></p>
+		<p>Graphic designer and sociologist. Expertise in communication design for artistic and cultural projects. Specialized in visual identity and editorial design.<br><a href="https://es.linkedin.com/pub/florencia-grassi-gurfein/28/78b/207" target="_blank" rel="noopener noreferrer nofollow">LinkedIn</a></p>
 		<br>
 		<p><b>Leandro Lattes</b></p>
 		<p>Industrial designer. Works at the intersection of brands and environments: including visual identities, brand comunication, print and interactive media, branded environments, exhibition design, retail concepts, signage and wayfinding. <br>
 			Design skills in both 3D and 2D.</p>
-			<p>Author of photography books <i>While Stocks Last</i> Volumes I and II.<br><a href="http://instagram.com/leandrolattes" target="_blank">Instagram</a> <a href="https://es.linkedin.com/pub/leandro-lattes/28/ab8/770" target="_blank">LinkedIn</a></p>
+			<p>Author of photography books <i>While Stocks Last</i> Volumes I and II.<br><a href="http://instagram.com/leandrolattes" target="_blank" rel="noopener noreferrer nofollow">Instagram</a> <a href="https://es.linkedin.com/pub/leandro-lattes/28/ab8/770" target="_blank" rel="noopener noreferrer nofollow">LinkedIn</a></p>
 			<p class="p4"><br></p>
 			<p><b>Contributors</b></p>
             <p>Axel Kacelnik, Brendan Mc Cormick,<br> David Sueiro.
