gif files without statically.io

--- a/_posts/2018-01-02-24x7.html
+++ b/_posts/2018-01-02-24x7.html
@@ -10,11 +10,11 @@ style: 'body{background-color: #a5a5a5;}'
 <iframe src="https://player.vimeo.com/video/206560247?title=0[content]byline=0[content]portrait=0" width="952" height="535" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="espacio30"></iframe>
 <iframe src="https://player.vimeo.com/video/206561959?title=0[content]byline=0[content]portrait=0" width="950" height="535" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="espacio30"></iframe>
 
-<img class="fix535 espacio30" src="{% include image_path.html %}/24x7-planos2.gif">
+<img class="fix535 espacio30" src="{% include image_path_local.html %}/24x7-planos2.gif">
 
 <img class="fix535 espacio30" src="{% include image_path.html %}/24x7folleto.jpg">
 
-<img class="fix535" src="{% include image_path.html %}/banderola24x7.gif">
+<img class="fix535" src="{% include image_path_local.html %}/banderola24x7.gif">
 <img class="fix535 espacio30" src="{% include image_path.html %}/banderolaretiro.jpg">
 
 
@@ -23,7 +23,7 @@ style: 'body{background-color: #a5a5a5;}'
 <img class="fix535 espacio30" src="{% include image_path.html %}/callao.jpg">
 
 
-<img class="fix535 espacio30" src="{% include image_path.html %}/callao24x7.gif">
+<img class="fix535 espacio30" src="{% include image_path_local.html %}/callao24x7.gif">
 
 <img class="fix535" src="{% include image_path.html %}/24x7web.jpg">
 
