--- a/_posts/2018-01-02-andres-jaque.html
+++ b/_posts/2018-01-02-andres-jaque.html
@@ -6,8 +6,8 @@ footer: '<strong>Tabacalera Promoción del Arte. Spanish Ministry of Culture & S
 ---
 <iframe src="https://player.vimeo.com/video/282813252?loop=1&title=0&byline=0&portrait=0" width="746" height="535" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="espacio30"></iframe>
 
-<img src="{% include image_path.html %}/CartelesAJ.gif" class="fix535">
-<img src="{% include image_path.html %}/AJcarteles.gif" class= "fix535 espacio30">
+<img src="{% include image_path_local.html %}/CartelesAJ.gif" class="fix535">
+<img src="{% include image_path_local.html %}/AJcarteles.gif" class= "fix535 espacio30">
 <img src="{% include image_path.html %}/Fachada Tabacalera.jpg" class="fix535  espacio30">
 
 <iframe src="https://player.vimeo.com/video/282813183?autoplay=1&title=0&byline=0&portrait=0" width="803" height="535" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="espacio30"></iframe>
