--- a/_posts/2018-01-02-architectus-omnibus.html
+++ b/_posts/2018-01-02-architectus-omnibus.html
@@ -15,7 +15,7 @@ footer: '<p><strong>Architectus Omnibus?</strong><br />  <strong>Instituto
 <img class="fix535 espacio30" src="{% include image_path.html %}/ao-5.png">
 
 <img class="fix535 espacio30" src="{% include image_path.html %}/ao-9.jpg">
-<img class="fix535 espacio30 espacio30" src="{% include image_path.html %}/ao2.gif">
+<img class="fix535 espacio30 espacio30" src="{% include image_path_local.html %}/ao2.gif">
 
 <img class="fix535 espacio30" src="{% include image_path.html %}/ao-interior.png">
 
