--- a/_posts/2018-01-02-cine-por-mujeres.html
+++ b/_posts/2018-01-02-cine-por-mujeres.html
@@ -5,9 +5,9 @@ image_path: /projects/cine-por-mujeres
 footer: '<p><strong>Limbo Producciones </strong>2018-2019<br />  <strong><em>Cine por mujeres.</em></strong> Films made by women. International Film Festival <br />Visual identity, poster, web, brochure, festival video teaser and social media animations'
 
 ---
-<img class="fix535" src="{% include image_path.html %}/Brandonclip.gif">
+<img class="fix535" src="{% include image_path_local.html %}/Brandonclip.gif">
 
-<img class="fix535 espacio30" src="{% include image_path.html %}/Logoanimation.gif">
+<img class="fix535 espacio30" src="{% include image_path_local.html %}/Logoanimation.gif">
 
 <img class="fix535 espacio30" src="{% include image_path.html %}/CartelCPM.png">
 
