--- a/_posts/2018-01-02-freshlatino2.html
+++ b/_posts/2018-01-02-freshlatino2.html
@@ -7,11 +7,11 @@ style: 'body{background-color: #a5a5a5;}'
 ---
 <iframe src="https://player.vimeo.com/video/113272641?autoplay=1&title=0&byline=0&portrait=0" width="952" height="535" frameborder="0" webkitallowfullscreen mozallowfullscreen class="espacio30"></iframe>
 <img class="fix535" src="{% include image_path.html %}/FreshL2-.jpg">
-<img class="fix535" src="{% include image_path.html %}/FL2-2.gif">
+<img class="fix535" src="{% include image_path_local.html %}/FL2-2.gif">
 <img class="fix535 espacio30" src="{% include image_path.html %}/FL2-3.png">
 
-<img class="fix535" src="{% include image_path.html %}/decalogo2.gif">
-<img class="fix535 espacio30" src="{% include image_path.html %}/FL2-19.gif">
+<img class="fix535" src="{% include image_path_local.html %}/decalogo2.gif">
+<img class="fix535 espacio30" src="{% include image_path_local.html %}/FL2-19.gif">
 
 <img src="{% include image_path.html %}/FL2-14.jpg">
 <img src="{% include image_path.html %}/FL2-15.jpg">
