--- a/_posts/2018-01-02-centro-federico-garcia-lorca.html
+++ b/_posts/2018-01-02-centro-federico-garcia-lorca.html
@@ -5,8 +5,8 @@ image_path: /projects/centro-federico-garcia-lorca
 footer: '<strong>Centro Federico García Lorca, Granada</strong> 2010-2015<br>Brand identity creation and development<br />Winner of international competition in 2010'
 
 ---
-<img class="fix535" src="{% include image_path.html %}/cfgl-f.gif">
-<img class="fix535 espacio30" src="{% include image_path.html %}/cfgl-f2.gif">
+<img class="fix535" src="{% include image_path_local.html %}/cfgl-f.gif">
+<img class="fix535 espacio30" src="{% include image_path_local.html %}/cfgl-f2.gif">
 
 <img class="fix535" src="{% include image_path.html %}/cfgl-b.jpg">
 <img class="fix535 espacio30" src="{% include image_path.html %}/cfgl-f4.jpg">
