--- a/_posts/2018-01-02-leandro-katz.html
+++ b/_posts/2018-01-02-leandro-katz.html
@@ -11,7 +11,7 @@ style: 'body{background-color: #a5a5a5;}'
 
 
 <img class="fix535" src="{% include image_path.html %}/tabacaleraLK.jpg">
-<img class="fix535 espacio30" src="{% include image_path.html %}/planosexpo.gif">
+<img class="fix535 espacio30" src="{% include image_path_local.html %}/planosexpo.gif">
 
 <iframe src="https://player.vimeo.com/video/214820579?title=0[content]byline=0[content]portrait=0" width="951" height="535" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="espacio30"></iframe>
 
