--- a/_posts/2018-01-02-transutopias.html
+++ b/_posts/2018-01-02-transutopias.html
@@ -6,7 +6,7 @@ footer: '<strong>Centro Centro, Ayuntamiento de Madrid</strong>&nbsp; 2018<br><s
 style: '.content img{vertical-align:top;}
 '
 ---
-<img src="{% include image_path.html %}/TMMM-ok.gif" class="fix535">
+<img src="{% include image_path_local.html %}/TMMM-ok.gif" class="fix535">
 <img src="{% include image_path.html %}/Transutopias01.jpg" class="fix535">
 <img src="{% include image_path.html %}/Transutopias02.jpg" class="fix535">
 <img src="{% include image_path.html %}/Transutopias08.jpg" class="fix535">
