gif files without statically.io el poder del arte

--- a/_posts/2019-01-02-el-poder-del-arte.html
+++ b/_posts/2019-01-02-el-poder-del-arte.html
@@ -15,10 +15,10 @@ footer: '<p><strong>Spanish Parliament, AC/E Spanish Cultural Agency, Museo Rein
 
 <img class="fix535 espacio25" src="{% include image_path.html %}/pda5.jpg">
 
-<img class="fix535" src="{% include image_path.html %}/autobus.gif">
+<img class="fix535" src="{% include image_path_local.html %}/autobus.gif">
 <img class="fix535 espacio25" src="{% include image_path.html %}/pda6.jpg">
 
 
-<img class="fix535 espacio25" src="{% include image_path.html %}/Publicacion-el-poder-del-arte.gif">
+<img class="fix535 espacio25" src="{% include image_path_local.html %}/Publicacion-el-poder-del-arte.gif">
 
-<img class="fix535 espacio25" src="{% include image_path.html %}/pda.gif">
+<img class="fix535 espacio25" src="{% include image_path_local.html %}/pda.gif">
