--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@ title: "El vivero"
 ---
 {% assign month = site.time | date: '%m' %}{% if month == "12" %}{% assign year = site.time | date: '%Y' | plus: 1 %}{% else %}{% assign year = site.time | date: '%Y' %}{% endif %}
 <div id="content" class="content">
-{% include escaparate-new.html %}
+  <object type="image/svg+xml" data="/assets/escaparate.svg">
+    <param name="src" value="/assets/escaparate.svg">
+  </object>
 </div>
 <div id="description" class="description">
   © El vivero <span style="font-size: 12px">2004–{{ year }}.</span>
