actualizando nuevos proyectos

--- a/_posts/2022-01-08-tout-va-bien.html
+++ b/_posts/2022-01-08-tout-va-bien.html
@@ -3,10 +3,11 @@ layout: post
 title: Tout va bien
 image_path: /projects/tout-va-bien
 footer: '<p><strong>Tabacalera Promoción del Arte. Ministerio de Cultura y Deporte, España</strong> 2020<br />  <strong><em>Joan Rabascall. Tout va bien</em></strong>.  Diseño expositivo, gráfica de la muestra, folleto e imágenes para redes sociales.<br> Catálogo, 160 páginas, 17 x 24 cm. © imágenes de la exposición: Ministerio de Cultura y Deporte, foto: Andrés Arranz'
+style: 'body{background-color: #a5a5a5;}'
 ---
 
-<img class="fix535" src="{% include image_path.html %}/tout-va-bien-cartel.jpg">
+<img class="fix535 espacio25" src="{% include image_path.html %}/tout-va-bien-cartel.jpg">
 
-<iframe src="https://player.vimeo.com/video/663667030?h=7a0f12b4fb&autoplay=0&player_id=0&app_id=58479" width="951" height="535" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
-<iframe src="https://player.vimeo.com/video/663667066?h=4771567113&autoplay=0&player_id=1&app_id=58479" width="813" height="535" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
-<iframe src="https://player.vimeo.com/video/663666994?h=82aef926fa&autoplay=0&player_id=2&app_id=58479" width="951" height="535" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+<iframe class="espacio25" src="https://player.vimeo.com/video/663667030?h=7a0f12b4fb&autoplay=0&player_id=0&app_id=58479" width="951" height="535" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+<iframe class="espacio25" src="https://player.vimeo.com/video/663667066?h=4771567113&autoplay=0&player_id=1&app_id=58479" width="813" height="535" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+<iframe class="espacio25" src="https://player.vimeo.com/video/663666994?h=82aef926fa&autoplay=0&player_id=2&app_id=58479" width="951" height="535" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
