--- a/_posts/2022-01-12-programas-musicales.html
+++ b/_posts/2022-01-12-programas-musicales.html
@@ -13,7 +13,5 @@ en CentroCentro. Identidad visual para tres programas musicales,
 <iframe src="https://player.vimeo.com/video/663758738?h=f2257860c6&badge=0&autopause=0&player_id=0&loop=1&app_id=58479" width="951" height=535" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen ></iframe>
 <iframe src="https://player.vimeo.com/video/663758770?h=f2f7c38042&badge=0&autopause=0&player_id=0&loop=1&app_id=58479" width="951" height=535" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen ></iframe>
 <!-- <iframe src="https://player.vimeo.com/video/663758799?h=17facc49d3&badge=0&autopause=0&player_id=0&loop=1&app_id=58479" width="951" height=535" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen ></iframe> -->
-<iframe src="/arboles" width="951" height=535"
-                                          frameborder="0" allow="autoplay; fullscreen; picture-in-picture"
-                                                          allowfullscreen style="border: 1px solid black;"></iframe>
+<iframe src="/arboles" width="951" height=535" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="border: 1px solid black;"></iframe>
 
