carteles programas musicales

--- a/_posts/2022-01-12-programas-musicales.html
+++ b/_posts/2022-01-12-programas-musicales.html
@@ -1,17 +1,20 @@
 ---
 layout: post
 title: Música en Centro Centro
-image_path: /projects/musica-en-centro-centro
+image_path: /projects/programas-musicales
 footer: '<strong>CentroCentro, Ayuntamiento de Madrid</strong> 2019-21<br>Música
 en CentroCentro. Identidad visual para tres programas musicales,
 <em>Disidencias</em>, <em>Vang</em> y <em>Viaje de invierno</em>.<br>Folletos, proyecciones programación auditorio e imágenes para web y redes sociales'
 ---
 
-<iframe src="https://player.vimeo.com/video/663758786?h=25d53edea6&badge=0&autopause=0&player_id=0&loop=1&app_id=58479" width="951" height=535" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen ></iframe>
-<iframe src="https://player.vimeo.com/video/663758704?h=a1d9af5f0d&badge=0&autopause=0&player_id=0&loop=1&app_id=58479" width="951" height=535" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen ></iframe>
-<iframe src="https://player.vimeo.com/video/663758723?h=3169a78a09&badge=0&autopause=0&player_id=0&loop=1&app_id=58479" width="951" height=535" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen ></iframe>
-<iframe src="https://player.vimeo.com/video/663758738?h=f2257860c6&badge=0&autopause=0&player_id=0&loop=1&app_id=58479" width="951" height=535" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen ></iframe>
-<iframe src="https://player.vimeo.com/video/663758770?h=f2f7c38042&badge=0&autopause=0&player_id=0&loop=1&app_id=58479" width="951" height=535" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen ></iframe>
-<!-- <iframe src="https://player.vimeo.com/video/663758799?h=17facc49d3&badge=0&autopause=0&player_id=0&loop=1&app_id=58479" width="951" height=535" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen ></iframe> -->
+<img class="fix535 espacio25" src="{% include image_path_local.html %}/musicaCC01.png">
+
+<img class="fix535 espacio25" src="{% include image_path_local.html %}/musicaCC02.png">
+
+<iframe class="espacio25" src="https://player.vimeo.com/video/663758786?h=25d53edea6&badge=0&autopause=0&player_id=0&loop=1&app_id=58479" width="951" height=535" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen ></iframe>
+<iframe class="espacio25" src="https://player.vimeo.com/video/663758704?h=a1d9af5f0d&badge=0&autopause=0&player_id=0&loop=1&app_id=58479" width="951" height=535" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen ></iframe>
+<iframe class="espacio25" src="https://player.vimeo.com/video/663758723?h=3169a78a09&badge=0&autopause=0&player_id=0&loop=1&app_id=58479" width="951" height=535" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen ></iframe>
+<iframe class="espacio25" src="https://player.vimeo.com/video/663758738?h=f2257860c6&badge=0&autopause=0&player_id=0&loop=1&app_id=58479" width="951" height=535" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen ></iframe>
+<iframe class="espacio25" src="https://player.vimeo.com/video/663758770?h=f2f7c38042&badge=0&autopause=0&player_id=0&loop=1&app_id=58479" width="951" height=535" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen ></iframe>
 <iframe src="/arboles" width="951" height=535" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="border: 1px solid black;"></iframe>
 
