--- a/_posts/2022-01-12-programas-musicales.html
+++ b/_posts/2022-01-12-programas-musicales.html
@@ -7,11 +7,12 @@ en CentroCentro. Identidad visual para tres programas musicales,
 <em>Disidencias</em>, <em>Vang</em> y <em>Viaje de invierno</em>.<br>Folletos, proyecciones programación auditorio e imágenes para web y redes sociales'
 ---
 
-<img class="fix535 espacio25" src="{% include image_path_local.html %}/musicaCC01.png">
-
-<img class="fix535 espacio25" src="{% include image_path_local.html %}/musicaCC02.png">
 
 <iframe class="espacio25" src="https://player.vimeo.com/video/663758786?h=25d53edea6&badge=0&autopause=0&player_id=0&loop=1&app_id=58479" width="951" height=535" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen ></iframe>
+
+<img class="fix535 espacio25" src="{% include image_path.html %}/musicaCC01.png">
+<img class="fix535 espacio25" src="{% include image_path.html %}/musicaCC02.png">
+
 <iframe class="espacio25" src="https://player.vimeo.com/video/663758704?h=a1d9af5f0d&badge=0&autopause=0&player_id=0&loop=1&app_id=58479" width="951" height=535" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen ></iframe>
 <iframe class="espacio25" src="https://player.vimeo.com/video/663758723?h=3169a78a09&badge=0&autopause=0&player_id=0&loop=1&app_id=58479" width="951" height=535" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen ></iframe>
 <iframe class="espacio25" src="https://player.vimeo.com/video/663758738?h=f2257860c6&badge=0&autopause=0&player_id=0&loop=1&app_id=58479" width="951" height=535" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen ></iframe>
